Update to PyCharm 2022.2, Java 17
Update module to PyCharm 2022.2
Use Java 17